--- a/assignments.html
+++ b/assignments.html
@@ -53,7 +53,9 @@
 					<li><a href="#chapter6">Chapter 6</a></li>	
 					<li><a href="#chapter7">Chapter 7</a></li>
 					<li><a href="#chapter8">Chapter 8</a></li>	
-					<li><a href="#chapter9">Chapter 9</a></li>	
+					<li><a href="#chapter9">Chapter 9</a></li>
+					<li><a href="#chapter10">Chapter 10</a></li>	
+					<li><a href="#chapter11">Chapter 11</a></li>	
 
 
 					<!-- End chapter item -->
@@ -223,6 +225,50 @@
 		</ol>
 	</section>
 	<!-- End chapter nine section -->
+
+	<!-- Start chapter ten section -->
+	<section id="chapter10">
+		<div class="heading">
+			<h2 class="heading-info">Chapter 10</h2>
+		</div>
+		<ol>
+			<li><a href="chapter10/initializinganarray.html">Initializing an Array</a></li>
+			<li><a href="chapter10/initarray.js">Init Array</a></li>
+			<li><a href="chapter10/initarray2.html">Initializing an Array</a></li>
+			<li><a href="chapter10/initarray2.js">Init Array2</a></li>
+			<li><a href="chapter10/sumarrayelements.html">Sum Array Elements</a></li>
+			<li><a href="chapter10/sumarray.js">Sum Array</a></li>
+			<li><a href="chapter10/rolldice.html">Roll a Six-Sided  Die 6000000 Times</a></li>
+			<li><a href="chapter10/rolldice.js.html">Roll Dice</a></li>
+			<li><a href="chapter10/randomimagegenerator">Random Generator</a></li>
+			<li><a href="chapter10/randompicture2.js">Random Picture2</a></li>
+			<li><a href="chapter10/arraysasarguments.html">Arrays as Arguments</a></li>
+			<li><a href="chapter10/passarray.js">Pass Array</a></li>
+			<li><a href="chapter10/arraymethodsort.html">Array Method sort</a></li>
+			<li><a href="chapter10/sort.js">Sort</a></li>
+			<li><a href="chapter10/searchanarray.html">Search ana Array</a></li>
+			<li><a href="chapter10/searchanarraywithindex.js">Search an array with indexOf</a></li>
+			<li><a href="chapter10/initarray3.html">Multidiminsional Arrays</a></li>
+			<li><a href="chapter10/initarray3.js">InitArray3</a></li>
+		</ol>
+	</section>
+	<!-- End chapter ten section -->
+
+	<!-- Start chapter ten section -->
+	<section id="chapter11">
+		<div class="heading">
+			<h2 class="heading-info">Chapter 11</h2>
+		</div>
+		<ol>
+			<li><a href="chapter11/detyra11.1.html">Detyra 11.1</a></li>
+			<li><a href="chapter11/detyra11.2.html">Detyra 11.2</a></li>
+			<li><a href="chapter11/detyra11.3.html">Detyra 11.3</a></li>
+			<li><a href="chapter11/detyra11.4.html">Detyra 11.4</a></li>
+			<li><a href="chapter11/detyra11.5.html">Detyra 11.5</a></li>
+			
+		</ol>
+	</section>
+	<!-- End chapter ten section -->
 
 	
 	<!-- Start date section -->
